// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-svelte > should add svelte loader properly 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.svelte\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
            "options": {
              "compilerOptions": {
                "dev": true,
              },
              "emitCss": false,
              "hotReload": true,
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "extensions": [
      ".svelte",
    ],
  },
  "resolveLoader": {
    "alias": {
      "svelte-loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
    },
  },
}
`;

exports[`plugin-svelte > should set dev and hotReload to false in production mode 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.svelte\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
            "options": {
              "compilerOptions": {
                "dev": false,
              },
              "emitCss": true,
              "hotReload": false,
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "extensions": [
      ".svelte",
    ],
  },
  "resolveLoader": {
    "alias": {
      "svelte-loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
    },
  },
}
`;
